syntax = "proto3";

package user;

option go_package = "./user";

message ReqGetUser {
  string id = 1;
}

message RespGetUser {
  // 用户id
  string id = 1;
  // 用户名称
  string name = 2;
  // 用户性别
  bool gender = 3;
}

service User {
  rpc getUser(ReqGetUser) returns(RespGetUser);
}
